# agent-tools

./: .gitattributes  .gitignore  CLAUDE-COMMANDS.md  CLAUDE.md  CODEX-COMMANDS.md  COMMANDS.md  README.md  install-claude.sh  install-codex.sh  install-gemini.sh  install.sh  pyproject.toml
.ai/: CONTINUITY.md
.claude/: CLAUDE.md  CONTINUITY.md
.github/workflows/: release.yml
claude/: CLAUDE.md
docs/: AGENT-SKILLS.md  FUTURE.md  GEMINI-EXTENSIONS.md
docs/Research/: AI-CLI-Tools-Feature-Research.docx  Unified-Permission-System-Rebuttal-Response.md
docs/Research/maestro-hooks/: README.md
docs/Research/migrate-commands-to-skills-review/: README.md
docs/Research/migrate-commands-to-skills-review/revisions/: gemini-enablement-spec.md  migration-path-spec.md  skill-format-spec.md
docs/Research/permissions-feature/: DECISION.md  HANDOFF.md  README.md  TASKS.md  Unified-Permission-System-Spec.docx  permission-equivalence-guide.md
docs/Research/permissions-feature/templates/: README.md
docs/maestro-testing/: 21-maestro-report.md  ASSESSMENT.md  README.md
docs/maestro-testing-2/: ASSESSMENT.md  README.md  execution-report-config-readme.md  execution-report.md
docs/maestro-v1/: CLAUDE-ACTION-CHECKLIST.md  CODEX.md  COST-GUARDRAILS.md  DELEGATION-MATRIX.md  EXAMPLES.md  FAILURE-RUNBOOK.md  GEMINI.md  GUIDE.md  Maestro-Guide-Claude.md  README.md
docs/maestro-v1/scripts/: audit.sh
features/continuity/claude/: CLAUDE.md
features/continuity/claude/commands/: continuity.md
features/continuity/codex/: AGENTS.md
features/continuity/codex/prompts/: continuity.md
features/continuity/gemini/: GEMINI.md
features/maestro/claude/: CLAUDE.md
features/maestro/docs/: README.md  SPOKE-CONTRACT.md  STATE-FILE-SPEC.md  TROUBLESHOOTING.md  USER-GUIDE.md
gemini/extensions/agent-tools/: gemini-extension.json
installer/: __init__.py
installer/python/: README.md  __init__.py  installer.py  nexus.py  nexus.tcss  requirements.txt
openspec/changes/add-continuity-hooks/: design.md  proposal.md  tasks.md
openspec/changes/add-delegation-method/: proposal.md  tasks.md
openspec/changes/add-feature-uninstall/: design.md  proposal.md  tasks.md
openspec/changes/add-homebrew-distribution/: proposal.md  tasks.md
openspec/changes/add-hub-task-classification/: proposal.md  tasks.md
openspec/changes/add-permissions-feature/: DESIGN.md  PROPOSAL.md  TASKS.md
openspec/changes/document-installer-spec/: tasks.md
openspec/changes/fix-maestro-dispatch-patterns/: design.md  tasks.md
openspec/changes/maestro-spoke-availability/: proposal.md  tasks.md
openspec/changes/migrate-commands-to-skills/: proposal.md  tasks.md
openspec/changes/rebuild-maestro-orchestration/: design.md  proposal.md  tasks.md
openspec/changes/unify-continuity-file/: proposal.md  tasks.md
openspec/changes/unify-installer-copy-behavior/: proposal.md  tasks.md
openspec/specs/continuity/: spec.md
openspec/specs/distribution/: spec.md
openspec/specs/installer/: spec.md
openspec/specs/maestro-orchestration/: spec.md
(+87 files in other folders)
