[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-ai"
version = "1.0.1"
description = "TUI installer for AI assistant CLI tools (Claude Code, Gemini CLI, Codex CLI)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Nexus-AI Contributors"}
]
keywords = ["cli", "ai", "assistant", "installer", "tui", "claude", "gemini", "codex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.50.0",
]

[project.scripts]
nexus-ai = "installer.python.nexus:main"

[project.urls]
Homepage = "https://github.com/N3SSQwiK/agent-tools"
Repository = "https://github.com/N3SSQwiK/agent-tools"
Issues = "https://github.com/N3SSQwiK/agent-tools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["installer*"]

[tool.setuptools.package-data]
"installer.python" = ["features/**/*", "*.tcss"]
